deleted padding and set margin:0 in <body> in styles.css. added padding property to <main>, <header>, and <footer> instead. This fixes the problem with white space from body padding affected the footer.

--- a/styles.css
+++ b/styles.css
@@ -3,12 +3,17 @@
 
 body{
     background: hsl(214, 64%, 98%);
-    padding: 6% 8%;
     font-family: 'Poppins', sans-serif;
     font-size: 18px;
 
+    margin: 0;
+
     /* hides horizontal scrolling */
     overflow-x: hidden;
+}
+
+main, header, footer{
+    padding: 3% 4%;
 }
 
 a{
@@ -42,15 +47,31 @@ a{
     /* overflow: auto; */
 }
 
+/* rows & columns */
+.row{
+    
+}
+
 /* decorative stuff */
 .decorativeRectangle{
     z-index: -1;
     position: absolute;
-    height: 100%;
-    width: 100%;
-    background: linear-gradient(hsl(322, 100%, 66%), hsl(265, 100%, 66%));
 
     border-radius: 80px;
+}
+.pinkRectangle{
+    background: linear-gradient(hsl(322, 100%, 66%), hsl(265, 100%, 66%));
+    height: 100%;
+    width: 100%;
+    transform: rotate(-10deg) translate(50%, 0%);
+}
+
+.whiteRectangle{
+    z-index: -2;
+    background: #fff;
+    height: 60%;
+    width: 80%;
+    transform: rotate(-10deg) translate(-5%, 80%);
 }
 
 footer{
